--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,10 @@ jobs:
       - name: Get environment from a file
         run: cat .env >>"$GITHUB_ENV"
 
+      - name: Set cache bust build-arg
+        if: github.event.inputs.no-cache == 'true'
+        run: echo "CACHEBUST=$(date +'%s')" >>"$GITHUB_ENV"
+
       # https://github.com/docker/setup-buildx-action
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -67,6 +71,7 @@ jobs:
             BRANCH=${{ env.BRANCH }}
             VERSION=${{ env.VERSION }}
             VERSION_WEB=${{ env.VERSION_WEB }}
+            CACHEBUST=${{ env.CACHEBUST }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
